<resources>
    <string name="app_name">MobileApp</string>

    <string name="main_toolbar_action_exercises">Exercises</string>

    <string name="main_exercise_31">Class 3 - Exercise 1</string>
    <string name="main_exercise_32">Class 3 - Exercise 2</string>
    <string name="main_exercise_33">Class 3 - Exercise 3</string>
    <string name="main_exercise_34">Class 3 - Exercise 4</string>
    <string name="main_exercise_51">Class 5 – Exercise 1-2</string>

    <string name="map_location">Barcelona, Spain</string>
    <string name="download_description">Download</string>
    <string name="favorite_description">Add to favorite</string>
    <string name="bookmark_description">Add to bookmarks</string>
    <string name="avatar_description">The Guy from Disturbed</string>

    <string name="main_search_hint">Search for a topic</string>


    <!-- Image Details -->
    <string name="details_camera_title">Camera</string>
    <string name="details_camera_default">NIKON D3200</string>

    <string name="details_aperture_title">Aperture</string>
    <string name="details_aperture_default">f/5.0</string>

    <string name="details_focal_title">Focal Length</string>
    <string name="details_focal_default">18.0mm</string>

    <string name="details_shutter_title">Shutter Speed</string>
    <string name="details_shutter_default">1/125s</string>

    <string name="details_iso_title">ISO</string>
    <string name="details_iso_default">100</string>

    <string name="details_dimensions_title">Dimensions</string>
    <string name="details_dimensions_default">3906 x 4882</string>

    <string name="details_views_title">Views</string>
    <string name="details_views_default">8.8M</string>

    <string name="details_downloads_title">Downloads</string>
    <string name="details_downloads_default">99.1K</string>

    <string name="details_likes_title">Likes</string>
    <string name="details_likes_default">1.8K</string>

    <!-- About -->
    <string name="about_text">This is a showcase app using Jetpack Compose with the Unsplash API</string>

    <!-- Content Description -->
    <string name="description_image_preview">Preview image</string>
    <string name="description_exercises">Open exercises screen</string>
    <string name="description_android">Android logo</string>
    <string name="description_kotlin">Kotlin logo</string>

    <string name="main_tab_images">IMAGES</string>
    <string name="main_tab_collections">COLLECTIONS</string>

    <string name="main_navigation_home">Home</string>
    <string name="main_navigation_about">About</string>

    <string name="description_search">Search for a topic</string>
</resources>