<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/description_image_preview"
            android:scaleType="centerCrop"
            android:src="@drawable/bcn_la_sagrada_familia" />

        <LinearLayout
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start|bottom"
            android:padding="16dp">

            <ImageView
                android:id="@+id/pin_drop"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/pin_drop"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_location"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="normal">
            </TextView>

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/image"
                    app:shapeAppearanceOverlay="@style/ImageViewRound"
                    android:scaleType="centerCrop"/>
                <Space
                    android:id="@+id/space_after_avatar"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/avatar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_name"
                    android:layout_toRightOf="@+id/space_after_avatar"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold">
                </TextView>

                <ImageView
                    android:id="@+id/bookmark"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/bookmark"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:id="@+id/favorite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_toLeftOf="@id/bookmark"
                    android:src="@drawable/favorite"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:id="@+id/download"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_toLeftOf="@id/favorite"

                    android:src="@drawable/download"
                    android:scaleType="centerCrop"/>


            </RelativeLayout>
            <!-- Camera -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_camera_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_camera_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <!-- Aperture -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_aperture_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_aperture_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Focal Length -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_focal_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_focal_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <!-- Shutter Speed -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_shutter_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_shutter_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- ISO -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_iso_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_iso_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>


            <!-- Dimensions -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/details_dimensions_title"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:text="@string/details_dimensions_default"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/background_light" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <include layout="@layout/image_info" />
            <Button
                android:id="@+id/button_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_button"
                android:text="@string/details_button_city"
                android:textAllCaps="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
            </Button>
            <Button
                android:id="@+id/button_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/button_city"
                android:background="@drawable/bg_button"
                android:text="@string/details_button_country"
                android:textAllCaps="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginStart="16dp">

            </Button>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>